chore: gitgnore에서 xcodeproj 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -63,16 +63,16 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 
-### Xcode Patch ###
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
+# ### Xcode Patch ###
+# *.xcodeproj/*
+# !*.xcodeproj/project.pbxproj
+# !*.xcodeproj/xcshareddata/
+# !*.xcworkspace/contents.xcworkspacedata
+# /*.gcno
 
-### Projects ###
-*.xcodeproj
-*.xcworkspace
+# ### Projects ###
+# *.xcodeproj
+# *.xcworkspace
 
 ### Tuist derived files ###
 graph.dot
